button class added well

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1,20 +1,30 @@
 @tailwind base;
 @tailwind components;
+
 .btn {
-  @apply inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold text-sm;
-}
-.btn:hover {
-  @apply bg-indigo-400;
+  @apply inline-block px-5 py-3 rounded-lg text-sm uppercase tracking-wider font-semibold;
 }
 .btn:focus {
   @apply outline-none shadow-outline;
 }
-.btn:active {
+
+.btn-indigo {
+  @apply bg-indigo-500 text-white;
+}
+.btn-indigo:hover {
+  @apply bg-indigo-400;
+}
+.btn-indigo:active {
   @apply bg-indigo-600;
 }
-@screen sm {
-  .btn {
-    @apply text-base;
-  }
+
+.btn-gray {
+  @apply bg-gray-400 text-gray-800;
+}
+.btn-gray:hover {
+  @apply bg-gray-300;
+}
+.btn-gray:active {
+  @apply bg-gray-500;
 }
 @tailwind utilities;
